--- a/utils/runTestKongInstance.yml
+++ b/utils/runTestKongInstance.yml
@@ -1,7 +1,8 @@
 #docker compose file which will run a kong instance (and konga) to test against
 # execute "docker stack deploy --compose-file=runTestKongInstance.yml kongtest"
-# kong normal endpoints are on ports 80 and 443
+# kong normal endpoints are on ports 79 and 443
 # kong Admin API runs on port 81
+#  test it:  http://HOSTNAME:81/status
 # Konga Admin instance runs on port 1337
 
 version: "3.1"
@@ -45,8 +46,8 @@ services:
       - KONG_PG_DATABASE=kong
       - KONG_ADMIN_LISTEN=0.0.0.0:8001
     ports:
-      - 81:8081
-      - 80:8080
+      - 81:8001
+      - 79:8080
       - 443:8443
     healthcheck:
       test: ["CMD-SHELL", "curl -I -s -L http://127.0.0.1:8000 || exit 1"]
