--- a/utils/runTestKongInstance.yml
+++ b/utils/runTestKongInstance.yml
@@ -47,7 +47,7 @@ services:
       - KONG_ADMIN_LISTEN=0.0.0.0:8001
     ports:
       - 81:8001
-      - 79:8080
+      - 79:8000
       - 443:8443
     healthcheck:
       test: ["CMD-SHELL", "curl -I -s -L http://127.0.0.1:8000 || exit 1"]
@@ -61,3 +61,36 @@ services:
         condition: on-failure
     ports:
      - 1337:1337
+
+  #Sample hello world services
+  helloworldservice:
+    image: metcarob/flaskappimage
+    deploy:
+      restart_policy:
+        condition: on-failure
+
+  #Configure kong to forward requests to flaskapp
+  kong-addapis-flaskapp:
+    image: byrnedo/alpine-curl
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 6s
+    entrypoint: "/bin/sh"
+    command:    "-c \" \
+                   (curl -i -X POST \
+                     --url http://kong:8001/apis/ \
+                     --data 'name=helloworldservice' \
+                     --data 'uris=/helloworldservice' \
+                     --data 'upstream_url=http://helloworldservice:80' \
+                     --data 'https_only=false') && \
+                   (curl -i -X POST \
+                     --url http://kong:8001/apis/helloworldservice/plugins \
+                     --data 'name=jwt' \
+                     --data 'config.secret_is_base64=true' \
+                     --data 'config.claims_to_verify=exp') && \
+                   (curl -i -X POST \
+                     --url http://kong:8001/apis/helloworldservice/plugins \
+                     --data 'name=acl' \
+                     --data 'config.whitelist=soa_tech_monitoring') \
+               \""
